Fix username wrapping

--- a/app/static/css/user.css
+++ b/app/static/css/user.css
@@ -27,6 +27,7 @@
     display: grid;
     justify-content: center;
     align-items: center;
+    overflow-wrap: anywhere;
 }
 
 .left-top h1 {
@@ -46,12 +47,16 @@
     margin-right: 8px;
 }
 
+.username {
+    padding-left: 1px;
+}
+
 .avatar-box {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     background-color: white;
     border: 1px solid #ddd;
     margin: auto;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     padding: 2px;
     display: inline;
     justify-content: center;
